[gd_scene load_steps=4 format=3 uid="uid://2u1r6e0y1ojo"]

[ext_resource type="Script" uid="uid://do74kf4txqnus" path="res://FullScreenSyncronizer/VideoWindow.gd" id="1_diqa7"]
[ext_resource type="Script" uid="uid://b0fmmpkqn70r6" path="res://VideoNode/VideoPlaybackUI.gd" id="3_dealp"]

[sub_resource type="ImageTexture" id="ImageTexture_bdebs"]

[node name="VideoWindow" type="Window" node_paths=PackedStringArray("video_texture", "overlay")]
oversampling_override = 1.0
position = Vector2i(0, 36)
size = Vector2i(500, 500)
exclusive = true
script = ExtResource("1_diqa7")
video_texture = NodePath("VideoPlayback")
overlay = NodePath("UI")

[node name="VideoPlayback" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ImageTexture_bdebs")
expand_mode = 5
stretch_mode = 5

[node name="UI" type="Control" parent="." node_paths=PackedStringArray("window", "play_button", "timeline", "container", "total_time_label", "current_time_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_dealp")
window = NodePath("..")
play_button = NodePath("Container/VBoxContainer/HBoxContainer/PlayPause")
timeline = NodePath("Container/VBoxContainer/HSlider")
container = NodePath("Container")
total_time_label = NodePath("Container/VBoxContainer/HBoxContainer/Total Time")
current_time_label = NodePath("Container/VBoxContainer/HBoxContainer/Current_Time")

[node name="Container" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Container"]
layout_mode = 2
alignment = 2

[node name="HSlider" type="HSlider" parent="UI/Container/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Container/VBoxContainer"]
layout_mode = 2

[node name="PlayPause" type="Button" parent="UI/Container/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "PLAY/PAUSE
"

[node name="Current_Time" type="Label" parent="UI/Container/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "00:00:00"

[node name="Total Time" type="Label" parent="UI/Container/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "/ 00:00:00"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="size_changed" from="." to="." method="_on_size_changed"]
